fixed alignment issue with search bar and toggle switch. added 'red' class

--- a/app/css/base/text.scss
+++ b/app/css/base/text.scss
@@ -18,6 +18,10 @@
 	color: $highlight;
 }
 
+.red {
+	color: #CD0001;
+}
+
 h1, .alpha { 
 	font-size: 2em;
 	line-height: 1.8em; 
