--- a/app/css/elements/input-prepend.scss
+++ b/app/css/elements/input-prepend.scss
@@ -1,6 +1,6 @@
 .input-prepend {
 	@include corners();
-	display: inline-block;
+	display: block;
 	line-height: 33px;
 	@extend .clearfix;
 }
