--- a/app/css/elements/toggle-switch.scss
+++ b/app/css/elements/toggle-switch.scss
@@ -111,7 +111,7 @@
 	/* Shared */
 	.ngst-toggle,
 	.ngst-switch {
-		display: inline-block;
+		display: block;
 		width: 200px;
 		height: 35px;
 	}
